# gstreamer-video-capture-and-write

./: CMakeLists.txt  README.md  app.cpp  app.h  test_pipeline.cpp  test_pipeline_cam.cpp  test_pipeline_rtsp.cpp  test_pipeline_rtsp1.cpp
qml/: main.qml
